/*
Copyright 2023 Quark Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";
package service_directory;

service ServiceDirectoryService {
  // Test
  rpc TestPing (TestRequestMessage) returns (TestResponseMessage) {}
  rpc Put (PutRequestMessage) returns (PutResponseMessage) {}
}

message TestRequestMessage {
    string client_name = 1;
}

message TestResponseMessage {
    string server_name = 1;
}

message KV {
    string key = 1;
    string val = 2;
} 

message Object {
    string kind = 1;
    string namespace = 2;
    string name = 3;
    repeated KV labels = 5;
    repeated KV annotations = 6;

    string val = 7;
}

message PutRequestMessage {
    Object obj = 1;
}

message PutResponseMessage {
    int64 revision = 1;
}